[project]
name = "gemini-ai-client-impl"
version = "0.1.0"
description = "Gemini AI client implementation with tool calling for cloud storage"
requires-python = ">=3.12"
dependencies = [
    "ai-client-api",
    "cloud-storage-api",
    "google-genai>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.10.0",
    "mypy>=1.17.0",
    "ruff>=0.12.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gemini_ai_client_impl"]

[tool.uv.sources]
ai-client-api = { workspace = true }
cloud-storage-api = { git = "https://github.com/2SpaceMasterRace/ospsd-cloud-storage.git", tag = "v1.0.0" }

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: unit tests",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = "google.genai"
ignore_missing_imports = true
# Reason: google-genai ships incomplete type stubs; the library is not fully typed.

[[tool.mypy.overrides]]
module = "google.genai.*"
ignore_missing_imports = true
